--- a/src/Render/Scene.css
+++ b/src/Render/Scene.css
@@ -6,5 +6,5 @@ html, body {
 .render-window
 {
     width: 100%;
-    height: 100vh;
+    display: flex;
 }
